# GoGame

./: .coveragerc  9testing.pkl  LICENSE  README.md  botnormalgo.py  chinese19.pkl  config.py  coveragesh.sh  eyetest.json  game_initialization.py  goclasses.py  handicap.py  main.py  mcst.py  multiplayer.py  network.py  neuralnet.py  neuralnetboard.py  nnmcst.py  player.py  pygametest.py  pyproject.toml  remove_dead.py  requirements.txt  requirements_dev.txt  saving_loading.py  scoringboard.py  server.py  setup.cfg  simplest9.pkl  tox.ini  true9testing.pkl  turn_options.py  uifunctions.py  undoing.py
.github/workflows/: tests.yml
pklfiles/: badblack.pkl  for_unit_testing.pkl  fullgamechinese.pkl  line.pkl  ogs19.pkl  simplestbruh.pkl  square.pkl  testing_undo_conds.pkl
src/GoGame/: botnormalgo.py  game_initialization.py  goclasses.py  handicap.py  main.py  mcst.py  neuralnet.py  neuralnetboard.py  nnmcst.py  player.py  remove_dead.py  saving_loading.py  scoringboard.py  turn_options.py  uifunctions.py  undoing.py
src/GoGame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
test_cases/: requirements_dev.txt  test_botnormalgo.py  test_game_initialization.py  test_goclasses.py  test_handicap.py  test_main.py  test_mcst.py  test_neuralnetboard.py  test_player.py  test_remove_dead.py  test_saving_loading.py  test_scoringboard.py  test_turn_options.py  test_ui_functions.py  test_undoing.py
test_cases/pklfilestesting/: endgame.pkl  for_unit_testing.pkl  fullgame.pkl  fullgamechinese.pkl  scoreboardsaved.pkl  startscoring.pkl  test_eyes.pkl  test_killing.pkl  (+6 more)
