[metadata]
name = GoGame
description = Python implementation of Go/Baduk, including a GUI to play it, as well as a implementation of AlphaGo Zero. 
author = Evan Peatman
license = MIT
license_file = LICENSE
platforms = unix, linux, win32
classifiers = 
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages = 
    GoGame
install_requires = 
    PySimpleGui >= 4
    pygame >= 2
    tensorflow >= 2.11

python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    flake8>=4.0
    tox>=4.13
    pytest>=7.0
    coverage>=7.2

[options.package_data]

GoGame = py.typed

[flake8]
max-line-length = 130
ignore = E402,W503